Feat: Added tab completes and basic plot command